Se modificó: mapeo base de datos de listas

--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-tamano.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-tamano.xhtml
@@ -47,9 +47,9 @@
             <p:inputText styleClass="valorEtiquetaFormulario"/>
             -->
 
-            <h:outputText value="Observaciones: " styleClass="etiquetaFormulario" />
+            <!--<h:outputText value="Observaciones: " styleClass="etiquetaFormulario" />
             <p:inputTextarea value="#{MbFormGrupoEmpresa.tamanoSeleccionado.observaciones}" rows="6" cols="66" label="Observaciones"/>
-
+-->
         </h:panelGrid>
     </p:panel>
 
