--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-tamano.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-tamano.xhtml
@@ -10,10 +10,10 @@
 
         <h:panelGrid columns="3" columnClasses="label, value" >
             
-            <h:outputText value="Información con corte a: " styleClass="etiquetaFormulario" />
+            <!--<h:outputText value="Información con corte a: " styleClass="etiquetaFormulario" />
             <p:inputText id="txtInforCorteA" value="#{MbFormUnidadLegal.tamanoSeleccionado.infoCorte}" styleClass="valorEtiquetaFormulario" label="Información con corte a"/>
             <p:message for="txtInforCorteA" />
-<!--
+
             <p:outputLabel value="Actividad principal*: " styleClass="etiquetaFormulario" />
             <p:inputText id="txtActividadPrincipal"  styleClass="valorEtiquetaFormulario"/>
             <p:message for="txtActividadPrincipal" />
@@ -86,9 +86,10 @@
             <p:inputText id="txtUtilidadNeta" value="#{MbFormUnidadLegal.tamanoSeleccionado.utilidadNeta}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="La Utilidad neta es requerido." label="Utilidad neta"/>
             <p:message for="txtUtilidadNeta" />
 
-            <p:outputLabel value="Observaciones: " styleClass="etiquetaFormulario" />
+            <!--<p:outputLabel value="Observaciones: " styleClass="etiquetaFormulario" />
             <p:inputTextarea id="txtObservaciones" value="#{MbFormUnidadLegal.tamanoSeleccionado.observaciones}" rows="6" cols="66" label="Observaciones"/>
             <p:message for="txtObservaciones" />
+            -->
 
         </h:panelGrid>
     </p:panel>
