25-Commit Implementación dependencia cargue municipios por departamento seleccionado en el formulario de empresa.

--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-identificacion.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-identificacion.xhtml
@@ -44,6 +44,7 @@
             <p:outputLabel value="Departamento sede principal: *" styleClass="etiquetaFormulario"/>
             <p:selectOneMenu id="cboDepartamentoSedePrincipal" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.departamento}" style="width:430px" required="true" requiredMessage="El Departamento es requerido.">
                 <f:selectItem itemLabel="Departamento..." itemValue="" />
+                <p:ajax event="change" listener="#{MbListaDesplegable.seleccionDepartamento}" update="cboCiudadCedePrincipal"/>
                 <f:selectItems value="#{MbListaDesplegable.listaDepartamentos}" var="Departamento" itemLabel="#{Departamento.nombre}" itemValue="#{Departamento.nombre}"/>
             </p:selectOneMenu>
             <p:message for="cboDepartamentoSedePrincipal"/>
