--- a/GrupoEmpresarial-war/web/interfaz/usuario/componente/cpt-formulario-usuario.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/usuario/componente/cpt-formulario-usuario.xhtml
@@ -72,6 +72,14 @@
             </div>
             <div class="ui-grid-row">
                 <div class="ui-grid-col-3">
+                    <p:outputLabel for="txtIdGrupo" value="Grupo Empresarial:" styleClass="etiquetaFormulario"/>
+                </div>
+                <div class="ui-grid-col-9">
+                    <p:inputText id="txtIdGrupo" value="#{MbAdministrarUsuario.usuarioSeleccionado.idIdentificacion}" required="true"  style="width: 90%;"/>                    
+                </div>
+            </div>
+            <div class="ui-grid-row">
+                <div class="ui-grid-col-3">
                    <p:outputLabel value="" styleClass="etiquetaFormulario"/>
                 </div>
                 <div class="ui-grid-col-9">
